--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: swift
 osx_image: xcode9.3
-xcode_project: Splashy.xcodeproj
-xcode_scheme: SplashyTests
+
+script:
+- xcodebuild clean test -project Splashy.xcodeproj -scheme Splashy -destination "platform=iOS Simulator,name=iPhone 8,OS=11.3" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO -quiet | xcpretty -c
