--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: swift
 osx_image: xcode9.3
 
 script:
-- xcodebuild clean test -project Splashy.xcodeproj -scheme Splashy -destination "platform=iOS Simulator,name=iPhone 8,OS=11.3" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO -quiet | xcpretty -c
+- xcodebuild clean test -project Splashy.xcodeproj -scheme Splashy -destination "platform=iOS Simulator,name=iPhone 8,OS=11.3" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO -quiet
