--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 script:
   - pod repo update && pod update
   - set -o pipefail
-  - xcodebuild build test -workspace Splashy.xcworkspace -scheme Splashy -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
+  - xcodebuild -workspace Splashy.xcworkspace -scheme Splashy -destination "platform=iOS Simulator,name=iPhone 8,OS=11.3" CODE_SIGNING_REQUIRED=NO  build test| xcpretty -c
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
