Removed Pods's code coverage.

--- a/Splashy.xcodeproj/xcshareddata/xcschemes/Splashy.xcscheme
+++ b/Splashy.xcodeproj/xcshareddata/xcschemes/Splashy.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "DF8C5915201684990022F2CF"
+            BuildableName = "Splashy.app"
+            BlueprintName = "Splashy"
+            ReferencedContainer = "container:Splashy.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
