Attempt to fix CodeCov.io - 5

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ osx_image: xcode9.3
 env:
   global:
   - PROJECT=Splashy.xcworkspace
-  - PROJECT_SCHEME=Splashy
+  - SCHEME=Splashy
   - DESTINATION_PLATFORM='platform=iOS Simulator,name=iPhone 8,OS=11.3'
   - CODECOV_ENDPOINT=https://codecov.io/bash
   - SDK=iphonesimulator
@@ -16,7 +16,7 @@ before_install:
 script:
   - pod repo update && pod update
   - set -o pipefail
-  - xcodebuild -workspace "$PROJECT" -scheme "$FRAMEWORK_SCHEME" -sdk "$SDK" -configuration Debug ONLY_ACTIVE_ARCH=YES -destination "$DESTINATION_PLATFORM" CODE_SIGNING_REQUIRED=NO -enableCodeCoverage YES GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES clean build test  | xcpretty -c
+  - xcodebuild -workspace "$PROJECT" -scheme "$SCHEME" -sdk "$SDK" -configuration Debug ONLY_ACTIVE_ARCH=YES -destination "$DESTINATION_PLATFORM" CODE_SIGNING_REQUIRED=NO -enableCodeCoverage YES GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES clean build test  | xcpretty -c
 
 after_success:
   - bash <(curl -s "$CODECOV_ENDPOINT") -J '^Constrictor$'
